WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75443
getComputedStyle for list-style is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=75443
Summary
getComputedStyle for list-style is not implemented.
Alexis Menard (darktears)
Reported
2012-01-02 12:33:33 PST
getComputedStyle for list-style is not implemented.
Attachments
Patch
(9.67 KB, patch)
2012-01-02 12:34 PST
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.16 KB, patch)
2012-01-03 10:45 PST
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2012-01-02 12:34:32 PST
Created
attachment 120891
[details]
Patch
Tony Chang
Comment 2
2012-01-03 10:34:51 PST
Comment on
attachment 120891
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=120891&action=review
> LayoutTests/fast/css/getComputedStyle/getComputedStyle-list-style-shorthand.html:56 > +shouldBe("computedStyle.getPropertyCSSValue('list-style').item(2).getStringValue()", "'none'");
I would maybe add some tests that set listStyleType, listStylePosition, or listStyleImage and make sure that list-style is properly updated. Up to you.
Alexis Menard (darktears)
Comment 3
2012-01-03 10:45:50 PST
Created
attachment 120958
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-01-03 15:21:00 PST
Comment on
attachment 120958
[details]
Patch for landing Clearing flags on attachment: 120958 Committed
r103974
: <
http://trac.webkit.org/changeset/103974
>
WebKit Review Bot
Comment 5
2012-01-03 15:21:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug