getComputedStyle for list-style is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75443

Reviewed by Tony Chang.

Source/WebCore:

Implement getComputedStyle for list-style.

Test: fast/css/getComputedStyle/getComputedStyle-list-style-shorthand.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add new tests to make sure we return the correct values.

* fast/css/getComputedStyle/getComputedStyle-list-style-shorthand-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-list-style-shorthand.html: Added.


Canonical link: https://commits.webkit.org/92265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103974 268f45cc-cd09-0410-ab3c-d52691b4dbfc